--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,19 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+
+
+.bg-dark{
+    width: 180px;
+    height: 420px;
+    border-radius: 40px;
+}
+
+.rounded-circle{
+    width: 130px;
+    height: 130px;
+}
+
+.shadow-1{
+    box-shadow: 0px 0px 20px 10px #0ff;
+}
